clang/test/Lexer/unknown-char.c
// RUN: clang -parse-ast-check %s
` ` ` ` // expected-error {{expected identifier or '('}}
